After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 727670 - rhythmbox crashed with SIGSEGV
rhythmbox crashed with SIGSEGV
Status: RESOLVED FIXED
Product: rhythmbox
Classification: Other
Component: general
2.98
Other Linux
: High critical
: ---
Assigned To: RhythmBox Maintainers
RhythmBox Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-04-05 16:24 UTC by Walter Garcia-Fontes
Modified: 2017-11-27 12:41 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Stacktrace (870 bytes, text/plain)
2014-04-05 16:24 UTC, Walter Garcia-Fontes
  Details
ext-db: fix crash when store request processing fails (1.10 KB, patch)
2017-11-27 08:12 UTC, gkrithi8
committed Details | Review

Description Walter Garcia-Fontes 2014-04-05 16:24:06 UTC
Drag and drop the album art on itself makes Rhythmbox crash.

Link to downstream bug:
https://bugs.launchpad.net/ubuntu/+source/rhythmbox/+bug/1162288
Comment 1 Walter Garcia-Fontes 2014-04-05 16:24:51 UTC
Created attachment 273634 [details]
Stacktrace
Comment 2 Jonathan Matthew 2014-04-05 21:56:24 UTC
Thanks for taking the time to report this bug.
Unfortunately, that stack trace is missing some elements that will help a lot to solve the problem, so it will be hard for the developers to fix that crash. Can you get us a stack trace with debugging symbols? Please see http://live.gnome.org/GettingTraces for more information on how to do so and reopen this bug or report a new one. Thanks in advance!
Comment 3 gkrithi8 2017-11-27 08:12:02 UTC
Created attachment 364483 [details] [review]
ext-db: fix crash when store request processing fails
Comment 5 Jonathan Matthew 2017-11-27 12:39:54 UTC
Review of attachment 364483 [details] [review]:

pushed as commit 5d18adb
Comment 6 Jonathan Matthew 2017-11-27 12:41:06 UTC
Thanks for matching this up with the downstream bug reports.