ext-db: fix crash when store request processing fails

https://bugzilla.gnome.org/show_bug.cgi?id=727670